--- a/libft/Makefile
+++ b/libft/Makefile
@@ -35,39 +35,47 @@ SRCS =	ft_atoi.c \
 		ft_substr.c \
 		ft_tolower.c \
 		ft_toupper.c
-		ft_lstnew.c \
-		ft_lstadd_front.c \
-		ft_lstsize.c \
-		ft_lstlast.c \
-		ft_lstadd_back.c \
-		ft_lstdelone.c \
-		ft_lstclear.c \
-		ft_lstiter.c \
-		ft_lstmap.c \
+
+BONUS =	ft_lstnew_bonus.c \
+		ft_lstadd_front_bonus.c \
+		ft_lstsize_bonus.c \
+		ft_lstlast_bonus.c \
+		ft_lstadd_back_bonus.c \
+		ft_lstdelone_bonus.c \
+		ft_lstclear_bonus.c \
+		ft_lstiter_bonus.c \
+		ft_lstmap_bonus.c \
 
 SDIRS =	./
 IDIRS =	./
 
 SFILES = $(addprefix $(SDIRS),$(SRCS))
+BFILES = $(addprefix $(SDIRS),$(BONUS))
 OSFILES = $(patsubst %.c,%.o,$(SFILES))
+OBFILES = $(patsubst %.c,%.o,$(BFILES))
 
-CC = clang
+CC = cc
 CFLAGS = -Wall -Wextra -Werror
 
 $(NAME): $(OSFILES)
 	ar -rcs $(NAME) $^
 
-all: $(NAME)
+bonus: $(NAME) $(OBFILES)
+	ar -rcs $(NAME) $^
+
+all: bonus
 
 clean:
 	rm -f $(OSFILES)
+	rm -f $(OBFILES)
 
 fclean: clean
 	rm -f $(NAME)
+	rm -f libft.so
 
 re: fclean all
 
 %.o: %.c
 	$(CC) $(CFLAGS) -I$(IDIRS) -c -o $@ $^
 
-.PHONY: all clean fclean re $(NAME)
+.PHONY: bonus all clean fclean re
